# bgdia700

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: blank.yml
bgdia700/: main.py
bgdia700/backend/: backend.py
bgdia700/backend/datalayer/: initdata.py  pyproject.toml
docs/: conf.py  index.rst  src.backend.rst  src.frontend.rst  src.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.backend.datalayer.html  src.backend.html  src.frontend.html  src.html
docs/_build/html/_sources/: src.backend.datalayer.rst.txt
docs/_build/html/_static/: documentation_options.js
scripts/: alter_db.py  alter_db_add_meta_ingredient.py  alter_db_add_rating_ingredient  alter_db_add_rating_ingredient.py  generate_db_cooking.py
src/: logging_config.py  main.py  testLaury.py
src/backend/: backend.py
src/backend/datalayer/: cooking.py  initdata.py
src/frontend/: frontend.py
tests/: test_logging_config.py  test_main.py
tests/test_backend/: test_backend.py
tests/test_backend/test_datalayer/: test_cooking.py  test_initdata.py
tests/test_frontend/: test_frontend.py
