[tool.poetry]
name = "bgdia700"
version = "0.1.0"
description = "Projet bgdia700 : creation d'une webapp Streamlit d'analyse de données"
authors = ["Hugo, Yael, Laury"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
