[tool.poetry]
name = "bgdia700"
version = "0.1.0"
description = "Webapp streamlit d'analyse de données"
authors = ["lolomasterIA <laury.magne@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
streamlit = "^1.39.0"
plotly = "^5.24.1"
argparse = "^1.4.0"
pytest-mock = "^3.14.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
wordcloud = "^1.9.4"
xgboost = "^2.1.2"
spacy = "^3.8.2"
streamlit-navigation-bar = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
black = "^24.10.0"
pydocstyle = "^6.3.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests"]
